run_spec(__dirname, ["vue"]);
run_spec(__dirname, ["vue"], { embeddedLanguageFormatting: "off" });
